<resources>
    <string name="app_name">Py_repet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="_2021_01_01_01_01_01">2021_01_01_01_01_01</string>
    <string name="_01_01_2021">01/01/2021 00:00:00</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_file">Delete file?</string>
    <string name="enter_new_file_name">enter new file name</string>
    <string name="old_file_name">Old file name:</string>
    <string name="new_file_name">New file name:</string>
    <string name="cancel">Cancel</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="q">q</string>
    <string name="w">w</string>
    <string name="e">e</string>
    <string name="r">r</string>
    <string name="t">t</string>
    <string name="y">y</string>
    <string name="u">u</string>
    <string name="i">i</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="a">a</string>
    <string name="s">s</string>
    <string name="d">d</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="__">_</string>
    <string name="z">z</string>
    <string name="x">x</string>
    <string name="c">c</string>
    <string name="v">v</string>
    <string name="b">b</string>
    <string name="n">n</string>
    <string name="m">m</string>
    <string name="del">DEL</string>
    <string name="new_file_name_is_empty">New file name is empty!</string>
    <string name="file_renamed">File renamed</string>
    <string name="not_renamed">NOT renamed</string>
    <string name="_wav">.wav</string>
    <string name="file_was_not_deleted">File was not deleted!</string>
    <string name="file_not_exists">File not exists!</string>
    <string name="file_name">File name</string>
    <string name="audio_player">Audio player</string>
    <string name="choose_file_to_play">Choose file to play!</string>
    <string name="music_note">Music note</string>
    <string name="skip_previous">Skip previous</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="play">Play</string>
    <string name="fast_forward">Fast forward</string>
    <string name="skip_next">Skip next</string>
    <string name="microphone">Microphone</string>
    <string name="playlist">Playlist</string>
    <string name="audio_recording_is_still_in_process">Audio recording is still in process.</string>
    <string name="do_you_want_to_stop_process">Do you want to stop process?</string>
</resources>