<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/one_item_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center_horizontal"
        android:text="@string/old_file_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/text_view_alert_dialog_file_name_old_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center_horizontal"
        android:text="@string/_2021_01_01_01_01_01"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center_horizontal"
        android:text="@string/new_file_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/edit_text_alert_dialog_file_name_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyz_"
        android:fontFamily="@font/archivo_black"
        android:gravity="center_horizontal"
        android:hint="@string/enter_new_file_name"
        android:maxLength="19"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="normal" />

    <com.example.voicerecorder.CustomKeyboard
        android:id="@+id/custom_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_alert_dialog_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/cancel"
            android:textColor="@color/color_4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_alert_dialog_rename"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/rename"
            android:textColor="@color/color_4"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>