<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/one_item_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/one_item_background"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linear_layout_one_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/_2021_01_01_01_01_01"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/text_view_file_time_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/_01_01_2021"
            android:textColor="@color/color_4"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/image_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_6"
            android:contentDescription="@string/menu"
            android:padding="3dp"
            android:src="@drawable/ic_menu" />

    </LinearLayout>

</LinearLayout>